--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.demo</groupId>
+  <groupId>org.nwpu</groupId>
   <artifactId>bs</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>gateway</module>
     <module>user</module>
+    <module>match</module>
   </modules>
 
   <name>bs</name>
@@ -69,4 +70,3 @@
     </plugins>
   </build>
 </project>
-
