--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,8 +8,14 @@ spring:
     gateway:
       #路由规则,数据类型为List
       routes:
+        - id: match_service_route
+          #需要转发的地址
+          uri: lb://match-service
+          #断言规则,用于路由规则的匹配
+          predicates:
+            - Path=/api/*/match-service/**,/api/match-service/**
         #路由的唯一标识
-        - id: order_route
+        - id: user_service_route
           #需要转发的地址
           uri: lb://user-service
           #断言规则,用于路由规则的匹配
