--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>gateway</module>
     <module>user</module>
     <module>match</module>
+    <module>board</module>
   </modules>
 
   <name>bs</name>
