--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -2,3 +2,9 @@ qiniu.access=56md70-YXLKXFMCb63FSKpdAjiDg4FRAu6lCBbl2
 qiniu.secret=xQzBPu047vEPCPXNFJ0qUOn-G6BeXcZSJQePFkG1
 qiniu.spaceName=lrklrc
 qiniu.domain=http://rqir2gx3y.hn-bkt.clouddn.com/
+spring.mail.host=smtp.163.com
+spring.mail.username=iGuaDaOfficial@163.com
+spring.mail.password=KRIGODVMRPBKQJLC
+spring.mail.from=iGuaDaOfficial@163.com
+spring.mail.default-encoding=utf-8
+
