--- a/html/bs/package.json
+++ b/html/bs/package.json
@@ -13,7 +13,9 @@
     "element-ui": "^2.15.6",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "less": "^4.1.2",
+    "less-loader": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
